--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seatable-html-page-sdk",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "JavaScript SDK for embedding HTML pages within SeaTable Universal Apps.",
   "main": "./lib/index.js",
   "module": "./es/index.js",
@@ -21,7 +21,8 @@
     "url": "https://github.com/seatable/seatable-html-page-sdk/issues"
   },
   "keywords": [
-    "HTML page"
+    "HTML page",
+    "SDK"
   ],
   "author": "SeaTable",
   "files": [
